--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -36,6 +36,12 @@ h2 {
   text-transform: uppercase;
   line-height: 1.2;
 }
+h4 {
+  font-size: 2.5rem;
+  margin-bottom: 5rem;
+  text-transform: uppercase;
+  line-height: 1.2;
+}
 
 a {
   text-decoration: none;
@@ -43,37 +49,6 @@ a {
 
 p {
   margin-bottom: 3rem;
-}
-
-.responsive-table {
-  overflow: hidden;
-  overflow-x: auto;
-}
-
-table {
-  min-width: 360px;
-  width: 100%;
-  border-collapse: collapse;
-}
-
-table caption {
-  font-style: italic;
-  font-size: 1.6rem;
-  text-align: left;
-  margin-bottom: 1rem;
-}
-
-table td,
-table th {
-  white-space: nowrap;
-  padding: 1rem;
-  text-align: left;
-  border: 0.1rem solid var(--light-gray-color)
-}
-
-tfoot td,
-table th {
-  background: var(--light-gray-color);
 }
 
 .whatsapp-article {
@@ -100,11 +75,7 @@ table th {
   height: auto;
   margin-left: 20px;
 }
-.lamp-icon {
-  width: 80px;
-  height: auto;
-  margin-left: 20px;
-}
+
 .p-contact {
   font-size: 2em;
   font-weight: 700;
@@ -130,17 +101,6 @@ table th {
 .p-contact a{
   text-decoration: none;
   color: inherit;
-}
-.p-email {
-  font-size: 0.8em;
-  font-weight: 700;
-  text-align: center;
-  margin-top: 30px;
-  display: inline;
-  border-radius: 15px;background: linear-gradient(to right, #ffdc19, #f78503);
-  -webkit-background-clip: text;
-  color: transparent;
-  transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
 }
 
 .p-email a{
