--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 @import '../css/reset.css';
+
 .intro-content {
   position: relative;
   top: 0rem;
@@ -11,8 +12,10 @@
 .intro-text-content {
   display: flex;
   flex-flow: column wrap;
+  text-align: center;
 
 }
+
 .intro-img {
   display: flex;
   flex-flow: column wrap;
@@ -21,21 +24,26 @@
 
 .intro-img img,
 .intro-img svg {
-  max-width: 80%;
+  max-width: 100%;
   height: auto;
 }
-.trafego-img img,
-.trafego-img svg {
-  max-width: 90%;
-  height: auto;
-}
+
 .bordered-image {
-  border: 6px solid #bc9c6c; 
-  border-radius: 10px; 
+  border: 6px solid #bc9c6c;
+  border-radius: 10px;
   display: block;
   margin: 0 auto;
-  max-width: 100%; 
+  max-width: 100%;
 }
+
+.bordered-section {
+  border: 6px solid #bc9c6c;
+  border-radius: 10px;
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+}
+
 .logo-container {
   text-align: center;
 }
@@ -46,15 +54,10 @@
   margin-bottom: 0px;
 }
 
-.logo-text {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  color: #7f8c8d;
-  text-align: center;
-}
 .person-img img,
 .person-img svg {
-  width: 300px;
+  max-width: auto;
+  width: 400px;
   height: auto;
   margin-left: auto;
 }
@@ -69,45 +72,6 @@
   text-align: center;
 }
 
-.grid-one-content {
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: center;
-  min-height: 100vh;
-}
-
-.grid-main-heading {
-  margin-bottom: 1rem;
-}
-
-.grid-description {
-  padding-bottom: 5rem;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: var(--gap);
-  counter-reset: grid-counter;
-}
-
-.grid h3 {
-  font-size: 3rem;
-  position: relative;
-  padding-left: 5rem;
-  padding-bottom: 2rem;
-}
-
-.grid h3::before {
-  counter-increment: grid-counter;
-  content: counter(grid-counter);
-  position: absolute;
-  font-size: 8rem;
-  font-style: italic;
-  top: -4rem;
-  left: -2rem;
-  transform: rotate(5deg);
-}
 
 .gallery-img {
   width: 100%;
@@ -122,67 +86,6 @@
 
 .gallery-img img:hover {
   transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
-}
-
-.contact-form {
-  grid-column: span 2;
-}
-
-.contact-form .form-grid {
-  border: none;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: var(--gap);
-}
-
-.form-grid legend {
-  font-style: italic;
-  font-size: 1.6rem;
-  margin-bottom: 3rem;
-}
-
-.form-group {
-  flex: 1 1 320px;
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 1rem;
-}
-
-.form-group input,
-.form-group textarea {
-  border: none;
-  background: var(--white-color);
-  padding: 1.5rem 2rem;
-  width: 100%;
-  font-size: 3rem;
-  outline: none;
-}
-
-.form-group input:focus,
-.form-group textarea:focus {
-  box-shadow: 0 0 10px 2px var(--secondary-color);
-}
-
-.form-group button {
-  border: 0.5rem solid var(--white-color);
-  background: none;
-  color: var(--white-color);
-  padding: 1.5rem 2rem;
-  font-size: 3rem;
-  cursor: pointer;
-  transition: all 300ms ease-in-out;
-}
-
-.form-group button:hover {
-  background: var(--white-color);
-  color: var(--primary-color);
-}
-
-.form-group ::placeholder {
-  color: var(--light-gray-color);
 }
 
 .footer {
@@ -223,11 +126,6 @@
   border: 0.1rem solid var(--primary-color);
 }
 
-.destaque {
-  color: rgb(255, 230, 0);
-  font-weight: bold; 
-}
-
 @media (max-width: 800px) {
 
   .intro-content,
@@ -249,6 +147,7 @@
     display: block;
   }
 }
+
 
 @media (max-width: 280px) {
 
@@ -276,4 +175,12 @@
     margin-left: 10px;
   }
 
+}
+
+@media (max-width: 360px) {
+  .logo-img {
+    width: 250px;
+    height: auto;
+    margin-bottom: 0px;
+  }
 }
