--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,15 +29,16 @@
 }
 
 .bordered-image {
-  border: 6px solid #bc9c6c;
+  border: 6px solid var(--gold-color);
   border-radius: 10px;
   display: block;
   margin: 0 auto;
   max-width: 100%;
+  box-shadow: 0px 0px 10px rgba(247, 247, 247, 0.877);
 }
 
 .bordered-section {
-  border: 6px solid #bc9c6c;
+  border: 6px solid var(--gold-color);
   border-radius: 10px;
   display: block;
   margin: 0 auto;
@@ -62,49 +63,21 @@
   margin-left: auto;
 }
 
-.top3-content {
-  max-width: 64rem;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
-  min-height: 100vh;
-  text-align: center;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--gap);
+  counter-reset: grid-counter;
 }
 
-
-.gallery-img {
-  width: 100%;
-  max-width: 36rem;
-  max-height: 36rem;
-  overflow: hidden;
+.h-gold {
+  color: var(--gold-color);
 }
 
-.gallery-img img {
-  transition: all 300ms ease-in-out;
+.p-detail {
+  font-size: 0.5em;
 }
 
-.gallery-img img:hover {
-  transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
-}
-
-.footer {
-  text-align: center;
-  font-size: 1.6rem;
-}
-
-.footer a {
-  color: var(--primary-color);
-}
-
-.heart {
-  color: var(--secondary-color);
-}
-
-.footer p {
-  margin: 0;
-  padding: 5rem;
-}
 
 .close-menu {
   display: none;
@@ -131,16 +104,8 @@
   .intro-content,
   .grid {
     grid-template-columns: 1fr;
-  }
-
-  .gallery-img {
-    width: 100%;
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .gallery-img img {
-    width: 100%;
+    justify-items: center;
+    align-items: center;
   }
 
   .grid-one-content {
@@ -148,17 +113,16 @@
   }
 }
 
+.link {
+  color: white;
+  font-weight: bold;
+}
 
-@media (max-width: 280px) {
+@media (max-width: 270px) {
 
   .intro-content,
   .grid {
     grid-template-columns: 1fr;
-  }
-
-  .gallery-img img {
-    width: 100%;
-    height: auto;
   }
 
   .grid h3 {
@@ -182,5 +146,7 @@
     width: 250px;
     height: auto;
     margin-bottom: 0px;
+    justify-items: center;
+    align-items: center;
   }
 }
