--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -4,13 +4,11 @@
   color: var(--primary-color);
 }
 .book-bg {
-  background-image: url('../img/background3.jpg'); 
-  color: var(--white-color);
-  border-top: 4px solid var(--gold-color) ; 
-  border-bottom: 4px solid var(--gold-color) ; 
+  background-image: url('../img/bg.jpg'); 
   padding: 20px; 
   background-repeat: no-repeat;
-  background-size: cover
+  background-size: cover;
+  box-shadow: 0px 0px 10px rgb(247, 247, 247);
 }
 .gold-bg {
   background:var(--gold-color) ;
@@ -18,6 +16,7 @@
   width: 100%;
   height: auto;
   padding: 20px; 
+  box-shadow: 0px 0px 10px rgb(247, 247, 247, 0.658);
 }
 .main-content {
   max-width: 120rem;
