--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -19,6 +19,7 @@ body {
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
+  color: var(--white-color);
 }
 
 h1,
@@ -99,7 +100,7 @@ p {
   padding: 1rem;
   color: var(--white-color);
   text-align: center;
-  border: 6px solid #ffffffde;
+  border: 4px solid #ffffffab;
   border-radius: 10px;
 }
 
@@ -125,6 +126,7 @@ p {
 .personalized-card2:hover .hidden-paragraph {
   display: block;
 }
+
 .personalized-card2:hover .p-detail {
   display: none;
 }
@@ -159,10 +161,12 @@ p {
   color: var(--primary-color);
   font-size: 1.4rem;
 }
+
 .footer p {
   margin: 0;
   padding: 5rem;
 }
+
 .heart {
   color: var(--secondary-color);
 }
