--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,13 +7,22 @@
   grid-template-columns: 1fr 1.5fr;
   gap: var(--gap);
   min-height: 45vh;
+  text-align: left;
+}
+.intro-content h4 {
+  border-bottom: 1px solid #000; 
+  padding-bottom: 10px; 
 }
 
 .intro-text-content {
   display: flex;
   flex-flow: column wrap;
-  text-align: center;
+  text-align: left;
   justify-content: center;
+}
+.intro-text-content h4 {
+  border-bottom: 1px solid #000; 
+  padding-bottom: 10px; 
 }
 
 .intro-img {
@@ -34,7 +43,6 @@
   display: block;
   margin: 0 auto;
   max-width: 100%;
-  box-shadow: 0px 0px 10px rgba(247, 247, 247, 0.877);
 }
 
 .bordered-image-researche {
@@ -43,7 +51,6 @@
   display: block;
   margin: 0 auto;
   max-width: 100%;
-  box-shadow: 0px 0px 8px rgba(247, 247, 247, 0.877);
 }
 
 .bordered-section {
@@ -67,7 +74,7 @@
 .person-img img,
 .person-img svg {
   max-width: auto;
-  width: 400px;
+  width: 250px;
   height: auto;
   margin-left: auto;
 }
