--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -29,23 +29,21 @@ h4,
 h5,
 h6 {
   font-family: 'Montserrat', sans-serif;
+  
 }
 
 h1 {
-  font-size: 6rem;
-  text-transform: uppercase;
-}
-
-h1 {
-  font-size: 6rem;
+  font-size: 3.5rem;
   text-transform: uppercase;
 }
 
 h2 {
-  font-size: 3.5rem;
+  font-size: 3.2rem;
   margin-bottom: 5rem;
   text-transform: uppercase;
   line-height: 1.2;
+  border-bottom: 1px solid #000; 
+  padding-bottom: 10px; 
 }
 
 h4 {
