--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -3,8 +3,9 @@
   --primary-color: #0A1128;
   --gray-color: #dbd9d9;
   --white-color: #FFFFFF;
-  --light-gray-color: #EEEEEE;
+  --light-gray-color: #a5a4a4;
   --secondary-color: crimson;
   --gap: 3rem;
   --gold-color: #bc9c6c;
+  --blue-color: rgba(172, 198, 247, 0.753);
 }
