--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,10 @@
   min-height: 45vh;
   text-align: left;
 }
+.intro-content h3 {
+  margin-top: 100px;
+  text-align: left;
+}
 .intro-content h4 {
   border-bottom: 1px solid #000; 
   padding-bottom: 10px; 
@@ -34,6 +38,8 @@
 }
 
 .bordered-image {
+  border: 2px solid var(--gold-color);
+  border-radius: 10px;
   display: block;
   margin: 0 auto;
   max-width: 100%;
