--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -7,5 +7,5 @@
   --secondary-color: crimson;
   --gap: 3rem;
   --gold-color: #bc9c6c;
-  --blue-color: rgba(172, 198, 247, 0.753);
+  --blue-color: #000066;
 }
