--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -35,6 +35,16 @@ h2 {
   border-bottom: 1px solid #000;
   padding-bottom: 10px;
 }
+.h2-contact {
+  font-size: 3.2rem;
+  margin-bottom: 5rem;
+  text-transform: uppercase;
+  line-height: 1.2;
+  border-bottom: 1px solid #ffffff;
+  padding-bottom: 10px;
+}
+
+
 
 h4 {
   font-size: 2.5rem;
